--- a/ProjetosAndroid/PI2/app/src/main/AndroidManifest.xml
+++ b/ProjetosAndroid/PI2/app/src/main/AndroidManifest.xml
@@ -51,6 +51,19 @@
             android:label="Sobre"
             android:parentActivityName=".atividades.GraduacaoActivity" >
         </activity>
+        <activity
+            android:name=".Activity.HomeActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".Activity.CourseActivity"
+            android:label="@string/cursos"
+            android:parentActivityName=".Activity.HomeActivity"
+            android:launchMode="singleTop">
+        </activity>
     </application>
 
 </manifest>
