Ajustes nas classes de Disciplina

--- a/ProjetosAndroid/PI2/app/src/main/AndroidManifest.xml
+++ b/ProjetosAndroid/PI2/app/src/main/AndroidManifest.xml
@@ -64,6 +64,11 @@
             android:parentActivityName=".Activity.HomeActivity"
             android:launchMode="singleTop">
         </activity>
+        <activity
+            android:name=".Activity.DisciplineActivity"
+            android:label="Disciplinas"
+            android:parentActivityName=".Activity.CourseActivity" >
+        </activity>
     </application>
 
 </manifest>
