--- a/ProjetosAndroid/PI2/app/src/main/AndroidManifest.xml
+++ b/ProjetosAndroid/PI2/app/src/main/AndroidManifest.xml
@@ -69,6 +69,11 @@
             android:label="Disciplinas"
             android:parentActivityName=".Activity.CourseActivity" >
         </activity>
+        <activity
+            android:name=".Activity.TeacherActivity"
+            android:label="@string/docentes"
+            android:parentActivityName=".Activity.CourseActivity" >
+        </activity>
     </application>
 
 </manifest>
