--- a/PortalCG/PortalCG/PortalCG.csproj
+++ b/PortalCG/PortalCG/PortalCG.csproj
@@ -149,6 +149,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\CourseController.cs" />
+    <Compile Include="Controllers\DisciplineController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -156,6 +157,7 @@
     <Compile Include="Models\JsonModels\Course.cs" />
     <Compile Include="Models\JsonModels\Discipline.cs" />
     <Compile Include="Models\UploadFleModel.cs" />
+    <Compile Include="Models\ViewModels\DisciplineViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\Enum\TypeCourseEnum.cs" />
     <Compile Include="Util\Enum\TypeCourseFileEnum.cs" />
@@ -5086,11 +5088,15 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Index-old.cshtml" />
     <Content Include="Views\Course\AllCourses.cshtml" />
     <Content Include="Views\Course\GraduationCourse.cshtml" />
     <Content Include="Views\Shared\_CoursePartial.cshtml" />
     <Content Include="Views\Course\UploadFile.cshtml" />
+    <Content Include="Views\Course\AllDisciplines.cshtml" />
+    <Content Include="Views\Shared\_DisciplinePartial.cshtml" />
+    <Content Include="Views\Discipline\UploadFile.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
