--- a/PortalCG/PortalCG/PortalCG.csproj
+++ b/PortalCG/PortalCG/PortalCG.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Models\UploadFleModel.cs" />
     <Compile Include="Models\ViewModels\DisciplineViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\Enum\CourseOptionRouteEnum.cs" />
     <Compile Include="Util\Enum\TypeCourseEnum.cs" />
     <Compile Include="Util\Enum\TypeCourseFileEnum.cs" />
     <Compile Include="Util\UploadFileUtil.cs" />
