--- a/PortalCG/PortalCG/PortalCG.csproj
+++ b/PortalCG/PortalCG/PortalCG.csproj
@@ -156,8 +156,11 @@
     </Compile>
     <Compile Include="Models\JsonModels\Course.cs" />
     <Compile Include="Models\JsonModels\Discipline.cs" />
+    <Compile Include="Models\JsonModels\Teacher.cs" />
     <Compile Include="Models\UploadFleModel.cs" />
+    <Compile Include="Models\ViewModels\CourseViewModel.cs" />
     <Compile Include="Models\ViewModels\DisciplineViewModel.cs" />
+    <Compile Include="Models\ViewModels\TeacherViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\Enum\CourseOptionRouteEnum.cs" />
     <Compile Include="Util\Enum\TypeCourseEnum.cs" />
@@ -165,6 +168,7 @@
     <Compile Include="Util\UploadFileUtil.cs" />
     <Compile Include="WebAPIReference\ConfigData.cs" />
     <Compile Include="WebAPIReference\CourseWebAPI.cs" />
+    <Compile Include="WebAPIReference\TeacherWebAPI.cs" />
     <Compile Include="WebAPIReference\DisciplineWebAPI.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -5099,6 +5103,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Course\GraduationCourses.cshtml" />
     <Content Include="Views\Course\PostGraduateCourses.cshtml" />
+    <Content Include="Views\Shared\_TeacherPartial.cshtml" />
+    <Content Include="Views\Course\AllTeachers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
