--- a/PortalCG/PortalCG/PortalCG.csproj
+++ b/PortalCG/PortalCG/PortalCG.csproj
@@ -5091,8 +5091,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index-old.cshtml" />
     <Content Include="Views\Course\AllCourses.cshtml" />
     <Content Include="Views\Shared\_CoursePartial.cshtml" />
@@ -5105,6 +5103,7 @@
     <Content Include="Views\Course\PostGraduateCourses.cshtml" />
     <Content Include="Views\Shared\_TeacherPartial.cshtml" />
     <Content Include="Views\Course\AllTeachers.cshtml" />
+    <Content Include="Views\Course\DetailsCourse.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
