--- a/PortalCG/PortalCG/PortalCG.csproj
+++ b/PortalCG/PortalCG/PortalCG.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Models\ViewModels\DisciplineViewModel.cs" />
     <Compile Include="Models\ViewModels\TeacherViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\Enum\DisciplineOptionRouteEnum.cs" />
     <Compile Include="Util\Enum\CourseOptionRouteEnum.cs" />
     <Compile Include="Util\Enum\TypeCourseEnum.cs" />
     <Compile Include="Util\Enum\TypeCourseFileEnum.cs" />
@@ -5104,6 +5105,8 @@
     <Content Include="Views\Shared\_TeacherPartial.cshtml" />
     <Content Include="Views\Course\AllTeachers.cshtml" />
     <Content Include="Views\Course\DetailsCourse.cshtml" />
+    <Content Include="Views\Discipline\AllDisciplines.cshtml" />
+    <Content Include="Views\Discipline\AllTeachers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
