--- a/PortalCG/PortalCG/PortalCG.csproj
+++ b/PortalCG/PortalCG/PortalCG.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Controllers\CourseController.cs" />
     <Compile Include="Controllers\DisciplineController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\InstitutionalController.cs" />
     <Compile Include="Controllers\TeacherController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -163,6 +164,7 @@
     <Compile Include="Models\ViewModels\DisciplineViewModel.cs" />
     <Compile Include="Models\ViewModels\TeacherViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\Enum\TypeInstitutionalFileEnum.cs" />
     <Compile Include="Util\Enum\DisciplineOptionRouteEnum.cs" />
     <Compile Include="Util\Enum\CourseOptionRouteEnum.cs" />
     <Compile Include="Util\Enum\TypeCourseEnum.cs" />
@@ -5093,14 +5095,12 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Index-old.cshtml" />
     <Content Include="Views\Course\AllCourses.cshtml" />
     <Content Include="Views\Shared\_CoursePartial.cshtml" />
     <Content Include="Views\Course\UploadFile.cshtml" />
     <Content Include="Views\Course\AllDisciplines.cshtml" />
     <Content Include="Views\Shared\_DisciplinePartial.cshtml" />
     <Content Include="Views\Discipline\UploadFile.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Course\GraduationCourses.cshtml" />
     <Content Include="Views\Course\PostGraduateCourses.cshtml" />
     <Content Include="Views\Shared\_TeacherPartial.cshtml" />
@@ -5110,11 +5110,13 @@
     <Content Include="Views\Discipline\AllTeachers.cshtml" />
     <Content Include="Views\Teacher\AllTeachers.cshtml" />
     <Content Include="Views\Teacher\AllDisciplines.cshtml" />
+    <Content Include="Views\Institutional\UploadFile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="metronic\assets\apps\img\" />
     <Folder Include="metronic\assets\global\plugins\angularjs\plugins\angular-file-upload\uploads\" />
+    <Folder Include="Views\Home\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
