--- a/PortalCG/PortalCG/PortalCG.csproj
+++ b/PortalCG/PortalCG/PortalCG.csproj
@@ -173,6 +173,8 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\favicon.ico" />
+    <Content Include="Content\marca-topo.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
