--- a/PortalCG/PortalCG/Web.config
+++ b/PortalCG/PortalCG/Web.config
@@ -16,6 +16,10 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <authentication mode="Windows" />
+    <authorization>
+      <deny users="?" />
+    </authorization>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
