--- a/PortalCG/PortalCG/PortalCG.csproj
+++ b/PortalCG/PortalCG/PortalCG.csproj
@@ -147,16 +147,19 @@
     <Compile Include="Controllers\DisciplineController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InstitutionalController.cs" />
+    <Compile Include="Controllers\LeaderController.cs" />
     <Compile Include="Controllers\TeacherController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\JsonModels\Course.cs" />
     <Compile Include="Models\JsonModels\Discipline.cs" />
+    <Compile Include="Models\JsonModels\Leader.cs" />
     <Compile Include="Models\JsonModels\Teacher.cs" />
     <Compile Include="Models\UploadFleModel.cs" />
     <Compile Include="Models\ViewModels\CourseViewModel.cs" />
     <Compile Include="Models\ViewModels\DisciplineViewModel.cs" />
+    <Compile Include="Models\ViewModels\LeaderViewModel.cs" />
     <Compile Include="Models\ViewModels\TeacherViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\EnumDescription.cs" />
@@ -169,6 +172,7 @@
     <Compile Include="WebAPIReference\ConfigData.cs" />
     <Compile Include="WebAPIReference\CourseWebAPI.cs" />
     <Compile Include="WebAPIReference\DisciplineWebAPI.cs" />
+    <Compile Include="WebAPIReference\LeaderWebAPI.cs" />
     <Compile Include="WebAPIReference\TeacherWebAPI.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -5237,6 +5241,7 @@
     <Content Include="Views\Shared\_TeacherPartial.cshtml" />
     <Content Include="Views\Teacher\AllDisciplines.cshtml" />
     <Content Include="Views\Teacher\AllTeachers.cshtml" />
+    <Content Include="Views\Leader\AllLeaders.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
