Ajustes para criar novos dirigentes

--- a/PortalCG/PortalCG/PortalCG.csproj
+++ b/PortalCG/PortalCG/PortalCG.csproj
@@ -5208,6 +5208,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\Leader.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
@@ -5244,6 +5245,7 @@
     <Content Include="Views\Leader\AllLeaders.cshtml" />
     <Content Include="Views\Shared\_LeaderPartial.cshtml" />
     <Content Include="Views\Leader\Edit.cshtml" />
+    <Content Include="Views\Leader\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
