--- a/ProjetosAndroid/TP2/app/src/main/AndroidManifest.xml
+++ b/ProjetosAndroid/TP2/app/src/main/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.project.exemplo" >
+    package="com.example.project.exemplo">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:largeHeap="true"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".Activity.Splash" >
+        android:largeHeap="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".Activity.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,13 +21,11 @@
         <activity
             android:name=".Activity.LeaderActivity"
             android:label="Dirigentes"
-            android:parentActivityName=".Activity.HomeActivity" >
-        </activity>
+            android:parentActivityName=".Activity.HomeActivity"></activity>
         <activity
             android:name=".Activity.AboutActivity"
             android:label="Sobre"
-            android:parentActivityName=".Activity.HomeActivity" >
-        </activity>
+            android:parentActivityName=".Activity.HomeActivity"></activity>
         <activity
             android:name=".Activity.HomeActivity"
             android:label="@string/app_name">
@@ -38,19 +36,15 @@
         <activity
             android:name=".Activity.CourseActivity"
             android:label="@string/courses"
-            android:parentActivityName=".Activity.HomeActivity"
-            android:launchMode="singleTop">
-        </activity>
+            android:launchMode="singleTop"
+            android:parentActivityName=".Activity.HomeActivity"></activity>
         <activity
             android:name=".Activity.DisciplineActivity"
             android:label="Disciplinas"
-            android:parentActivityName=".Activity.CourseActivity" >
-        </activity>
+            android:parentActivityName=".Activity.CourseActivity"></activity>
         <activity
             android:name=".Activity.TeacherActivity"
             android:label="@string/teachers"
-            android:parentActivityName=".Activity.CourseActivity" >
-        </activity>
+            android:parentActivityName=".Activity.CourseActivity"></activity>
     </application>
-
 </manifest>
