--- a/ProjetosAndroid/TP2/app/src/main/AndroidManifest.xml
+++ b/ProjetosAndroid/TP2/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.Splash">
+        <activity android:name=".Activity.Splash"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,10 +22,6 @@
         <activity
             android:name=".Activity.LeaderActivity"
             android:label="Dirigentes"
-            android:parentActivityName=".Activity.HomeActivity"></activity>
-        <activity
-            android:name=".Activity.AboutActivity"
-            android:label="Sobre"
             android:parentActivityName=".Activity.HomeActivity"></activity>
         <activity
             android:name=".Activity.HomeActivity"
