Ajustes apra fazer upload de arquivos.

--- a/PortalCG/PortalCG/PortalCG.csproj
+++ b/PortalCG/PortalCG/PortalCG.csproj
@@ -169,7 +169,7 @@
     <Compile Include="Util\Enum\TypeCourseEnum.cs" />
     <Compile Include="Util\Enum\TypeCourseFileEnum.cs" />
     <Compile Include="Util\Enum\TypeInstitutionalFileEnum.cs" />
-    <Compile Include="Util\UploadFileUtil.cs" />
+    <Compile Include="WebAPIReference\UploadFile.cs" />
     <Compile Include="WebAPIReference\ConfigData.cs" />
     <Compile Include="WebAPIReference\CourseWebAPI.cs" />
     <Compile Include="WebAPIReference\DisciplineWebAPI.cs" />
