Ajustes no app: Alterado nome do aplicativo; Removido o splash

--- a/ProjetosAndroid/TP2/app/src/main/AndroidManifest.xml
+++ b/ProjetosAndroid/TP2/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.Splash"
+        <activity android:name=".Activity.HomeActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,15 +21,8 @@
         </activity>
         <activity
             android:name=".Activity.LeaderActivity"
-            android:label="Dirigentes"
+            android:label="@string/leaders"
             android:parentActivityName=".Activity.HomeActivity"></activity>
-        <activity
-            android:name=".Activity.HomeActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".Activity.CourseActivity"
             android:label="@string/courses"
@@ -37,7 +30,7 @@
             android:parentActivityName=".Activity.HomeActivity"></activity>
         <activity
             android:name=".Activity.DisciplineActivity"
-            android:label="Disciplinas"
+            android:label="@string/disciplines"
             android:parentActivityName=".Activity.CourseActivity"></activity>
         <activity
             android:name=".Activity.TeacherActivity"
