Ajustes no app: Alteração no layout de home

--- a/ProjetosAndroid/TP2/app/src/main/AndroidManifest.xml
+++ b/ProjetosAndroid/TP2/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:largeHeap="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Activity.HomeActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
